--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,10 +1,9 @@
-image: python:3
+image: themattrix/tox
 
 pipelines:
   default:
     - step:
-        script:
-          - pip install -U tox
-          - pip --version
-          - tox --version
-          - tox
+      script:
+        - pip install -U setuptools pip
+        - pip install -U tox
+        - tox
