--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,9 @@
 description-file = README.rst
 
 [bdist_wheel]
-universal=1
+universal = 1
+
+[aliases]
+release = clean --all sdist bdist_wheel #build_sphinx
+upload = upload #upload_docs
+test = pytest
