Enhancements on setup.py and integration with py.test and tox

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,4 @@ universal = 1
 [aliases]
 release = clean --all sdist bdist_wheel #build_sphinx
 upload = upload #upload_docs
-test = pytest
+test = tox
