Better py.test and tox support

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,17 @@
-[metadata]
-description-file = README.rst
+[aliases]
+release = sdist bdist_wheel #build_sphinx
+upload = upload #upload_docs
+test = pytest
 
 [bdist_wheel]
+dist-dir = .dist
 universal = 1
 
-[aliases]
-release = clean --all sdist bdist_wheel #build_sphinx
-upload = upload #upload_docs
-test = tox
+[build]
+build-base = .build
+
+[egg_info]
+egg-base = .dist
+
+[sdist]
+dist-dir = .dist
