--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,32 @@
 [tox]
-envlist = py27, py34, py35
+envlist =
+    py27
+    py34
+    py35
+;    flakes
+
+
+[pytest]
+addopts = --doctest-modules -rsxX -v
+doctest_optionflags = ALLOW_UNICODE ELLIPSIS
+
+pep8maxlinelength = 99
+pep8ignore = *.py W503 E402 E731
+
 
 [testenv]
-deps = pytest
-commands = py.test
+deps =
+    pytest>=2.3.5
+
+commands =
+    py.test {posargs:tests}
+
+
+[testenv:flakes]
+deps =
+    pytest-flakes>=0.2
+    pytest-pep8
+
+commands =
+    py.test --flakes -m flakes
+    py.test --pep8 -m pep8
