--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ pep8ignore = *.py W503 E402 E731
 
 [testenv]
 deps =
-    pytest>=2.3.5
+    pytest
 
 commands =
     py.test {posargs:tests}
@@ -24,7 +24,7 @@ commands =
 
 [testenv:flakes]
 deps =
-    pytest-flakes>=0.2
+    pytest-flakes
     pytest-pep8
 
 commands =
