Tox configuration improvements

--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,42 @@
 [tox]
 envlist =
+    check
     py27
     py34
     py35
     py36
-;    flakes
 
 
 [pytest]
-addopts = --doctest-modules -rsxX -v
+addopts = --doctest-modules -rsxX -vv
 doctest_optionflags = ALLOW_UNICODE ELLIPSIS
-
-pep8maxlinelength = 99
-pep8ignore = *.py W503 E402 E731
 
 
 [testenv]
+setenv =
+    PYTHONUNBUFFERED=yes
+passenv =
+    PYTHONUNBUFFERED
+    PYTHONPATH
+
 deps =
     pytest
 
 commands =
-    py.test {posargs:tests}
+    pytest {posargs} src tests
 
 
-[testenv:flakes]
+[testenv:check]
 deps =
-    pytest-flakes
-    pytest-pep8
-
+    docutils
+    check-manifest
+    flake8
+    readme-renderer
+    pygments
+    isort
+skip_install = true
 commands =
-    py.test --flakes -m flakes
-    py.test --pep8 -m pep8
+    python setup.py check --strict --metadata --restructuredtext
+    check-manifest {toxinidir}
+    flake8 src tests setup.py
+    isort --verbose --check-only --diff --recursive src tests setup.py
