--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,6 +3,8 @@ image: python:3
 pipelines:
   default:
     - step:
+        caches:
+          - pip
         script:
           - pip install -U setuptools pip
           - pip install -U tox
