--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,6 @@ pipelines:
         caches:
           - pip
         script:
-          - pip install -U setuptools pip
-          - pip install -U tox
+          - pip3 install -U setuptools pip
+          - pip3 install -U tox
           - tox
