--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,5 @@ pipelines:
         caches:
           - pip
         script:
-          - pip3 install -U setuptools pip
-          - pip3 install -U tox
+          - sudo apt-get update && apt-get install -y --no-install-recommends git
           - tox
