--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,5 +6,5 @@ pipelines:
         caches:
           - pip
         script:
-          - sudo apt-get update && apt-get install -y --no-install-recommends git
+          - apt-get update && apt-get install -y --no-install-recommends git
           - tox
